# pontos_turisticos

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
atracoes/: admin.py  apps.py  models.py  serializers.py  viewsets.py
atracoes/migrations/: 0001_initial.py  0002_atracao_endereco.py  0002_rename_atracoes_atracao.py
atracoes/tests/: test_atracoes.py
atracoes/urls/: urls.py  urls_back.py
avaliacoes/: admin.py  models.py  viewsets.py
avaliacoes/migrations/: 0001_initial.py  0002_avaliacao_usuario.py
avaliacoes/tests/: tests_avaliacoes.py
avaliacoes/urls/: urls.py  urls_back.py
comentarios/: admin.py  models.py  serializers.py  viewsets.py
comentarios/fixtures/: motivos_comentarios.json
comentarios/migrations/: 0001_initial.py
comentarios/tests/: test_comentarios.py
comentarios/urls/: urls.py  urls_back.py
comum/: admin.py  models.py
comum/fixtures/: opcoes_tag.json
comum/migrations/: 0001_initial.py
hospedagens/: admin.py  models.py
hospedagens/fixtures/: tipo_hospedagem.json
hospedagens/migrations/: 0001_initial.py
pontos/: admin.py  models.py
pontos/migrations/: 0001_initial.py  0002_auto_20210530_0707.py
pontos_turisticos/: settings.py  urls.py
restaurantes/: admin.py  models.py
restaurantes/migrations/: 0001_initial.py
usuarios/: admin.py  models.py  validators.py
usuarios/migrations/: 0001_initial.py  0002_user_endereco.py  0003_alter_perfil_acesso.py
